--- a/04-css/08-etc.html
+++ b/04-css/08-etc.html
@@ -148,7 +148,8 @@
     <div class="image2"></div>
     <style>
       .image2 {
-        height: 700px;
+        width: 236px;
+        height: 222px;
         /* h높이값을 안 넣어주면 이미지가 안 보임 */
         -webkit-mask-image: url(./images/w3logo.png);
         mask-image: url(./images/w3logo.png);
