--- a/04-css/01-속성선택자.html
+++ b/04-css/01-속성선택자.html
@@ -21,5 +21,26 @@
         background: #00ff88;
       }
     </style>
+
+    <h2>button disabled</h2>
+    <input type="button" value="비활성화" disabled />
+    <style>
+      .button {
+        background-color: #4caf50; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+      .button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+      }
+    </style>
   </body>
 </html>
