--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
     <!-- <script src="./1-js데이터.js"></script> -->
-    <script src="./2-연산자.js"></script>
+    <!-- <script src="./2-연산자.js"></script> -->
+    <script src="./3-구문.js"></script>
+
 </head>
 <body>
     
