--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -6,8 +6,8 @@
     <title>javascript</title>
     <!-- <script src="./1-js데이터.js"></script> -->
     <!-- <script src="./2-연산자.js"></script> -->
-    <script src="./3-구문.js"></script>
-
+    <!-- <script src="./3-구문.js"></script> -->
+    <script src="./3-조건문.js"></script>
 </head>
 <body>
     
