--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="./1-js데이터.js"></script> -->
     <!-- <script src="./2-연산자.js"></script> -->
     <!-- <script src="./3-구문.js"></script> -->
-    <script src="./3-조건문.js"></script>
+    <!-- <script src="./3-조건문.js"></script> -->
+    <script src="./4-함수.js"></script>
 </head>
 <body>
     
