--- a/06-site/onepage/index.html
+++ b/06-site/onepage/index.html
@@ -18,13 +18,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./dist/scss/comm.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="./dist/css/comm.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
+  <script defer src="./dist/js/comm.js"></script>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
   <div class="wrap">
-    <header id="header">
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <header id="header" class="bg-white fixed-top">
+      <nav class="navbar navbar-inverse navbar-expand-sm navbar-dark">
         <div class="container-fluid">
           <h1>
             <a class="navbar-brand" href="#">Hyebin park</a>
@@ -32,16 +38,19 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+          <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#service">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Connect</a>
               </li>
             </ul>
           </div>
@@ -50,7 +59,7 @@
     </header>
 
     <main id="main">
-      <div class="p-5 bg-dark text-white">
+      <div id="jumbotron" class="p-5 bg-dark text-white">
         <div class="container">
           <h1>binbin</h1>
           <p>Lorem ipsum...</p>
@@ -58,15 +67,15 @@
       </div>
     </main>
 
-    <section id="about" class="sec-g"><!-- pt padding-top, pb padding-btm -->
+    <section id="about" class="sec-g">
       <div class="container"><!-- container로 그리드 잡아줌 -->
         <div class="title d-flex justify-content-center mb-5">
-          <h2>about</h2>
+          <h2>About</h2>
         </div>
         <div class="row">
           <div class="col-sm-8">
-            <h2>제목</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <h2 data-aos="fade-in">제목</h2>
+            <p data-aos="fade-in">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
               Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
               Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
           </div>
@@ -77,10 +86,45 @@
       </div>
     </section>
     
-    <div id="service" class="bg-light sec-g">
+    <section id="service" class="bg-light sec-g">
       <div class="container">
         <div class="title d-flex justify-content-center mb-5">
-          <h2>service</h2>
+          <h2>Service</h2>
+        </div>
+        <div class="row">
+          <div class="col-sm-4" 
+          data-aos="fade-up"
+          data-aos-delay="50"
+          data-aos-duration="1000"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          data-aos-once="false"
+          data-aos-anchor-placement="top-center">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+          <div class="col-sm-4">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+          <div class="col-sm-4">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio" class="sec-g">
+      <div class="container">
+        <div class="title d-flex justify-content-center mb-5">
+          <h2>Portfolio</h2>
         </div>
         <div class="row">
           <div class="col-sm-4">
@@ -103,7 +147,43 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section id="contact" class="bg-light sec-g">
+      <div class="container">
+        <div class="title d-flex justify-content-center mb-5">
+          <h2>Contact</h2>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+          <div class="col-sm-4">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+          <div class="col-sm-4">
+            <h2>제목</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Reiciendis cumque libero explicabo placeat et odit facere porro quia. 
+              Et, voluptatum sapiente esse illo placeat nostrum sunt ab adipisci ipsum possimus.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer id="footer"></footer>
   </div>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
 </body>
 </html>
