--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./3-구문.js"></script> -->
     <!-- <script src="./3-조건문.js"></script> -->
     <script src="./4-함수.js"></script>
+    <!-- <script type="module" src="./main.js"></script> -->
 </head>
 <body>
     
