--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -8,10 +8,13 @@
     <!-- <script src="./2-연산자.js"></script> -->
     <!-- <script src="./3-구문.js"></script> -->
     <!-- <script src="./3-조건문.js"></script> -->
-    <script src="./4-함수.js"></script>
+    <!-- <script defer src="./4-함수.js"></script> -->
+    <!-- <script defer src="./5-클래스.js"></script> -->
     <!-- <script type="module" src="./main.js"></script> -->
+    <!-- <script src="./6-표준내장객체-문자.js"></script> -->
+    <script src="./6-표준내장객체-숫자,수학.js"></script>
 </head>
 <body>
-    
+    <h1>stop</h1>
 </body>
 </html>
