--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -12,9 +12,17 @@
     <!-- <script defer src="./5-클래스.js"></script> -->
     <!-- <script type="module" src="./main.js"></script> -->
     <!-- <script src="./6-표준내장객체-문자.js"></script> -->
-    <script src="./6-표준내장객체-숫자,수학.js"></script>
+    <!-- <script src="./6-표준내장객체-숫자,수학.js"></script> -->
+    <!-- <script src="./6-표준내장객체-배열.js"></script> -->
+    <script defer src="./7-dom .js"></script>
 </head>
 <body>
-    <h1>stop</h1>
+    <div class="parent">
+        <!-- 주석 -->
+        text1
+        <div class="child">1</div>
+        text2
+        <div class="child">2</div>
+    </div>
 </body>
 </html>
